@@ -1,5 +1,9 @@
 2004-11-15  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtkwindow.xml (gtk.window_set_default_icon_name)
+	(get_icon_name, set_icon_name, get_focus_on_map, set_focus_on_map):
+	Add descriptions.
+
 	* pygtk-gtktreeview.xml (set_row_separator_func)
 	(set_hover_expand, get_hover_expand, set_hover_selection)
 	(get_hover_selection, set_fixed_height_mode, get_fixed_height_mode)
